Updated assets, fix for collapsed tabs in IE

--- a/app/assets/stylesheets/search_appliance_overrides.css.scss
+++ b/app/assets/stylesheets/search_appliance_overrides.css.scss
@@ -33,4 +33,10 @@
       margin-left: 0;
     }
   }
+
+  html[data-useragent*='MSIE 10.0'] {
+    .search-appliance {
+      @include search-appliance-ie-tabs-small;
+    }
+  }
 }
